--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <body>
-  <div onclick="moremoney()">Hello, World!<div>
+  <div id="Hello, World!" class="Hello, World!" onclick="moremoney()">Hello, World!<div>
 <body>
