--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<body>
+<html lang="en" class="everything">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
+    <title id="titletext">Hello, World!</title>
+</head>
+<body class="background">
   <div id="Hello, World!" class="Hello, World!" onclick="moremoney()">Hello, World!<div>
-<body>
+</body>
+<script src="Js/main.js"></script>
+</html>
