--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title id="titletext">Hello, World!</title>
 </head>
 <body class="background">
-  <div id="Hello, World!" class="Hello, World!" onclick="moremoney()">Hello, World!<div>
+  <div id="Hello, World!" class="helloWorld" onclick="moremoney()">Hello, World!<div>
 </body>
 <script src="Js/main.js"></script>
 </html>
