--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <title id="titletext">Hello, World!</title>
+    <title id="titletext">IldenH</title>
 </head>
 <body class="background">
-  <div id="Hello, World!" class="helloWorld" onclick="moremoney()">Hello, World!<div>
+  <div class="ildenh">IldenH<div>
+  <div></div>
+  <a class="link" href="Norskify">https://ildenh.github.io/Norskify/</a>
 </body>
 <script src="Js/main.js"></script>
 </html>
