Fixed tre viktige ting

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="background">
   <div class="ildenh">IldenH<div>
   <div></div>
-  <a class="link" href="Norskify">https://ildenh.github.io/Norskify/</a>
+  <a class="link" href="https://ildenh.github.io/Norskify/">Norskify</a>
 </body>
 <script src="Js/main.js"></script>
 </html>
