Added more links

--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
     <title id="titletext">IldenH</title>
 </head>
 <body class="background">
-  <div class="ildenh">IldenH<div>
-  <div></div>
-  <a class="link" href="https://ildenh.github.io/Norskify/">Norskify</a>
+  <div class="ildenh">IldenH</div>
+
+  <div class="link">
+    <a class="link" href="https://ildenh.github.io/Norskify/">Norskify</a>
+    <div>Norskify any sentence and make it funni</div>
+  </div>
+
+  <div class="link">
+    <a class="link" href="https://ildenh.itch.io/woodwoodchopchop">Wood Wood, Chop Chop</a>
+    <div>Game made for the survival game jam</div>
+  </div>
+
+  <div class="link">
+    <a class="link" href="https://ildenh.itch.io">Itch.io</a>
+    <div>Where most of my games are published</div>
+  </div>
+
+  <script src="Js/main.js"></script>
 </body>
-<script src="Js/main.js"></script>
 </html>
