--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="heigth=device-heigth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <title id="titletext">IldenH</title>
@@ -9,19 +10,19 @@
 <body class="background">
   <div class="ildenh">IldenH</div>
 
-  <div class="link">
+  <div>
     <a class="link" href="https://ildenh.github.io/Norskify/">Norskify</a>
-    <div>Norskify any sentence and make it funni</div>
+    <div class="desc">Norskify any sentence and make it funni</div>
   </div>
 
-  <div class="link">
+  <div>
     <a class="link" href="https://ildenh.itch.io/woodwoodchopchop">Wood Wood, Chop Chop</a>
-    <div>Game made for the survival game jam</div>
+    <div class="desc">Game made for the survival game jam</div>
   </div>
 
-  <div class="link">
+  <div>
     <a class="link" href="https://ildenh.itch.io">Itch.io</a>
-    <div>Where most of my games are published</div>
+    <div class="desc">Where most of my games are published</div>
   </div>
 
   <script src="Js/main.js"></script>
