--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="heigth=device-heigth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="IldenH.png">
     <title id="titletext">IldenH</title>
 </head>
 <body class="background">
